Revision history for Test-BrewBuild

2.12 UNREL
        - extended default install timeout to 600 seconds
        - fix erroneous uninitialized warning in Dispatch if a repo isn't sent
          in, and one isn't found with Git in the cwd. (fixes #165)
        - clarify what course of action to take if no testers can be found
          when bbdispatch is run (fixes #164)

2.11    2017-03-26
        - we now filter out cperls until we can do further testing. This is
          handled in BCMD::available() with a `[^c]` entry in the regex when we
          pull out the perls listed in $info (fixes #162)
        - _validate_opts() now only compares against argument directives, not
          their values (fixes #161)
        - in perlbrew v0.77, they introduced a confirmation requirement for
          'uninstall', which was breaking things for us. Went through the code,
          and found that sending in '--yes' as an argument to perlbrew in the
          uninstall command will bypass this confirmation, allowing things to
          work correctly here for the perls_remove() functionality
        - several test updates due to above changes
        - added additional logging to various areas
        - bumped prereq of Mock::Sub to 1.07

2.10    2016-11-19
        - fix shebang line in the scripts to reference `/usr/bin/env perl`
          instead of `/usr/bin/perl` (Thanks 'nigelhorne' (github) for the
          report) (closes #157)
        - change perms on the bin/ files to 755 from 644 (thanks again to
          'nigelhorne' from github for reporting) (closes #156)
        - moved BrewBuild object creation in brewbuild down below the checks to
          see if *brew is installed. No need for the object if they aren't
          (closes #160)
        - brewbuild was deleting $args{args} instead of $opts{args} when a
          plugin is in use without --revdep (fixes #159)
        - in BB::_exec(), we were returning before unloading the dzil shim. This